# pycommerce

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: FAQ.md
pycommerce/: __init__.py  __main__.py  config.py
pycommerce/core/dtos/: auth.py  category.py  user.py
pycommerce/core/entities/: base.py  category.py  customer.py  user.py
pycommerce/core/protocols/: category.py  common.py  crypto.py  customer.py  unit_of_work.py  user.py
pycommerce/core/services/: customer.py  exceptions.py  user.py
pycommerce/core/usecases/: category.py  user.py
pycommerce/infra/api/: app.py  dependencies.py  extensions.py
pycommerce/infra/api/dependencies/: auth.py  category.py  crypto.py  repositories.py  user.py
pycommerce/infra/api/routers/: customer.py  root.py
pycommerce/infra/api/routers/v1/: __init__.py  auth.py  category.py  customer.py  user.py
pycommerce/infra/db/: __init__.py
pycommerce/infra/db/migrations/: env.py
pycommerce/infra/db/migrations/versions/: 02cbc69fe4dd_init.py  cc990ea4c963_adding_is_admin_field_to_user_entities.py
pycommerce/infra/db/models/: category.py  customer.py  user.py
pycommerce/infra/db/repositories/: category.py  customer.py  user.py
pycommerce/infra/db/unit_of_work/: base.py  category.py  user.py
pycommerce/infra/providers/: crypto.py  jwt.py  user.py
scripts/pg/: init.sql
tests/: conftest.py
tests/integration/infra/api/: conftest.py  test_extensions.py
tests/integration/infra/api/routers/: test_customer.py  test_root.py
tests/integration/infra/api/routers/v1/: test_auth.py  test_category.py  test_customer.py  test_user.py
tests/integration/infra/api/routes/: test_customer.py
tests/integration/infra/providers/: test_crypto.py
tests/unit/core/entities/: test_category.py  test_customer.py  test_user.py
tests/unit/core/services/: test_customer.py  test_user.py
tests/unit/core/usecases/: test_category.py  test_user.py
tests/unit/core/usecases/fakes/: category.py  user.py
tests/utils/: db.py
