[tool.poetry]
name = "pycommerce"
version = "0.1.0"
description = "Ecommerce Example Application"
authors = ["alefeans <alefeans2@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
alembic = "^1.10.2"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
email-validator = "^1.3.1"
sqlmodel = "^0.0.8"
httpx = "^0.23.3"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
bcrypt = "^4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
pytest = "^7.2.2"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
filterwarnings = "ignore::DeprecationWarning"

[tool.poetry.scripts]
app = "pycommerce:start_server"

[tool.black]
line-length = 95
